--- a/linear-regression.html
+++ b/linear-regression.html
@@ -68,6 +68,11 @@
     #edTitle, #prTitle{
         font-weight: bold;
     }
+     @media screen and (max-width: 480px) {
+        img{
+            width: 100%;
+        }
+    }
 </style>
 <script src="java script.js"></script>
 
